--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,21 @@ API_TOKEN_SALT=tobemodified
 ADMIN_JWT_SECRET=tobemodified
 TRANSFER_TOKEN_SALT=tobemodified
 JWT_SECRET=tobemodified
+
+
+
+# HOST=0.0.0.0
+# PORT=1337
+# APP_KEYS=PFDiHIHQOuu12WRpKLqKHQ==,voWoWjtxJt2hm+y19kLsUA==,T3js2P3U75LlZrh22F4npg==,bL7sgfPQ/EGFNymyzL25bQ==
+# API_TOKEN_SALT=5LXU+r7U2Rjw1frqgOU9tw==
+# ADMIN_JWT_SECRET=EZYJ60/1nHgQeC9hl1BsMA==
+# TRANSFER_TOKEN_SALT=zRvzNuaq+L90FINUG3/pKQ==
+# # Database
+# DATABASE_CLIENT=mysql
+# DATABASE_HOST=127.0.0.1
+# DATABASE_PORT=3306
+# DATABASE_NAME=tutor-me-db
+# DATABASE_USERNAME=root
+# DATABASE_PASSWORD=root
+# DATABASE_SSL=false
+# JWT_SECRET=AZMryFnEdxtx5OVOBNSx+Q==
